<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipster</string>
    
    <string name="total_amount">Total amount:</string>
    <string name="no_of_people">No. of people:</string>
    <string name="tip_percentage">Tip percentage:</string>
    <string name="tip_amount">Tip amount:</string>
    <string name="total_to_pay">Total to pay:</string>
    <string name="total_per_person">Total per Person:</string>
    
    <string name="_15prc">15%</string>
    <string name="_20prc">20%</string>
    <string name="other">Other:</string>
    
    <string name="btn_reset">Reset</string>
    <string name="btn_calculate">Compute</string>
    <string name="btn_three">Reset</string>
    <string name="minus">-</string>
    <string name="initial_value">2</string>
    <string name="plus">+</string>

</resources>